refactoring data view - change pagination without total counting